Added a first time load effect to the page

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,14 +1,18 @@
 .App {
   text-align: center;
 }
-.Header {
+
+header {
+  background: rgba(209, 209, 199, 0.7);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+header h1 {
   color: #443e3e;
-  background: rgb(209, 209, 199);
   text-shadow: 1px 1px 5px #fff;
   margin: 0;
   padding: 20px;
-  /* position: fixed;
-  top: 0;
-  right: 0;
-  left: 0; */
 }
